--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.25.3",
     "husky": "^7.0.4",
-    "lint-staged": "^12.0.1",
+    "lint-staged": "^12.0.2",
     "prettier": "^2.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
@@ -32,12 +32,15 @@
     "@saberhq/token-utils": "^1.7.1",
     "@solana/spl-token-registry": "^0.2.291",
     "@solana/web3.js": "^1.30.2",
+    "axios": "^0.24.0",
     "bn.js": "^5.2.0",
     "jsbi": "^4.1.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "tiny-invariant": "^1.2.0"
   },
   "scripts": {
     "fetch-all-rewarders": "ts-node src/scripts/fetchAllRewarders.ts",
+    "build-token-list": "ts-node src/scripts/buildTokenList.ts",
     "prepare": "husky install"
   },
   "lint-staged": {
