--- a/.github/workflows/refresh-registry.yml
+++ b/.github/workflows/refresh-registry.yml
@@ -30,4 +30,9 @@ jobs:
       - run: yarn decorate-rewarders
       - run: yarn build-token-list
       - run: yarn build-tvl-list
-      - run: git push origin HEAD
+      - run: |
+          if [ "$(git diff-index HEAD)" != '' ]; then
+            git add .
+            git commit -m "Update rewarder list"
+            git push origin HEAD
+          fi
