update git config

--- a/.github/workflows/refresh-registry.yml
+++ b/.github/workflows/refresh-registry.yml
@@ -32,6 +32,8 @@ jobs:
       - run: yarn build-tvl-list
       - run: |
           if [ "$(git diff-index HEAD)" != '' ]; then
+            git config --global user.email "larry@quarry.so"
+            git config --global user.name "Larry Jarry"
             git add .
             git commit -m "Update rewarder list"
             git push origin HEAD
