--- a/package.json
+++ b/package.json
@@ -6,32 +6,31 @@
   "repository": "git@github.com:quarryprotocol/rewarder-list.git",
   "author": "Larry Jarry <larry@quarry.so>",
   "license": "AGPL-3.0",
-  "packageManager": "yarn@3.1.0",
+  "packageManager": "yarn@3.1.1",
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
-    "@saberhq/eslint-config": "^1.7.1",
+    "@saberhq/eslint-config": "^1.11.3",
     "@types/bn.js": "^5.1.0",
-    "@types/eslint": "^7.29.0",
-    "@types/lodash": "^4.14.177",
-    "@types/node": "^16.11.7",
+    "@types/eslint": "^8.2.1",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^16.11.17",
     "@types/prettier": "^2.4.2",
-    "eslint": "^8.2.0",
+    "eslint": "^8.5.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.25.3",
     "husky": "^7.0.4",
-    "lint-staged": "^12.0.2",
-    "prettier": "^2.4.1",
+    "lint-staged": "^12.1.4",
+    "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@project-serum/anchor": "^0.18.2",
-    "@quarryprotocol/quarry-sdk": "^1.10.1",
-    "@saberhq/anchor-contrib": "^1.7.1",
-    "@saberhq/solana-contrib": "^1.7.1",
-    "@saberhq/token-utils": "^1.7.1",
-    "@solana/spl-token-registry": "^0.2.303",
-    "@solana/web3.js": "^1.30.2",
+    "@project-serum/anchor": "^0.19.1-beta.1",
+    "@quarryprotocol/quarry-sdk": "^1.11.3",
+    "@saberhq/anchor-contrib": "^1.11.3",
+    "@saberhq/solana-contrib": "^1.11.3",
+    "@saberhq/token-utils": "^1.11.3",
+    "@solana/web3.js": "^1.31.0",
     "axios": "^0.24.0",
     "bn.js": "^5.2.0",
     "fast-json-stable-stringify": "^2.1.0",
