--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
   "packageManager": "yarn@3.1.1",
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
-    "@saberhq/eslint-config": "^1.11.3",
+    "@saberhq/eslint-config": "^1.12.26",
     "@types/bn.js": "^5.1.0",
-    "@types/eslint": "^8.2.1",
+    "@types/eslint": "^8.2.2",
     "@types/lodash": "^4.14.178",
-    "@types/node": "^16.11.17",
-    "@types/prettier": "^2.4.2",
-    "eslint": "^8.5.0",
+    "@types/node": "^16.11.19",
+    "@types/prettier": "^2.4.3",
+    "eslint": "^8.6.0",
     "eslint-import-resolver-node": "^0.3.6",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.4",
     "husky": "^7.0.4",
-    "lint-staged": "^12.1.4",
+    "lint-staged": "^12.1.7",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@project-serum/anchor": "^0.19.1-beta.1",
-    "@quarryprotocol/quarry-sdk": "^1.11.3",
-    "@saberhq/anchor-contrib": "^1.11.3",
-    "@saberhq/solana-contrib": "^1.11.3",
-    "@saberhq/token-utils": "^1.11.3",
+    "@project-serum/anchor": "^0.20.1",
+    "@quarryprotocol/quarry-sdk": "^1.11.9",
+    "@saberhq/anchor-contrib": "^1.12.26",
+    "@saberhq/solana-contrib": "^1.12.26",
+    "@saberhq/token-utils": "^1.12.26",
     "@solana/web3.js": "^1.31.0",
     "axios": "^0.24.0",
     "bn.js": "^5.2.0",
