--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,26 +6,26 @@ on:
       - master
 
 jobs:
-refresh:
-  runs-on: ubuntu-latest
-  name: Refresh Registry from chain
-  steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: "14"
-    - name: Get yarn cache directory path
-      id: yarn-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-    - name: Yarn Cache
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-        key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-modules-
-    - run: yarn install
-    - name: Typecheck
-      run: yarn tsc
-    - name: Lint
-      run: yarn lint
+  check:
+    runs-on: ubuntu-latest
+    name: Refresh Registry from chain
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+      - name: Yarn Cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-modules-
+      - run: yarn install
+      - name: Typecheck
+        run: yarn tsc
+      - name: Lint
+        run: yarn lint
