--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
-    name: Refresh Registry from chain
+    name: Check
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
