--- a/.github/workflows/refresh-registry.yml
+++ b/.github/workflows/refresh-registry.yml
@@ -31,6 +31,7 @@ jobs:
       - run: yarn install
       - run: mkdir -p data/
       - run: cp -R static/* data/
+      - run: yarn compile-rewarders-list
       - run: yarn fetch-all-rewarders
       - run: yarn decorate-rewarders
       - run: yarn build-token-list
