--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - master
+  push:
+    branches:
+      - master
 
 jobs:
   check:
@@ -25,7 +28,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-modules-
       - run: yarn install
+      - run: yarn compile-rewarders-list
       - name: Typecheck
-        run: yarn tsc
+        run: yarn typecheck
       - name: Lint
         run: yarn lint
