--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.3",
     "@saberhq/eslint-config": "^1.12.71",
+    "@saberhq/tsconfig": "^1.12.71",
     "@types/bn.js": "^5.1.0",
     "@types/eslint": "^8.4.1",
     "@types/lodash": "^4.14.182",
@@ -36,8 +37,10 @@
     "fast-json-stable-stringify": "^2.1.0",
     "jsbi": "^4.3.0",
     "lodash": "^4.17.21",
+    "superstruct": "^0.15.4",
     "tiny-invariant": "^1.2.0",
-    "toml": "^3.0.0"
+    "toml": "^3.0.0",
+    "tslib": "^2.4.0"
   },
   "scripts": {
     "typecheck": "tsc",
