--- a/package.json
+++ b/package.json
@@ -8,36 +8,39 @@
   "license": "AGPL-3.0",
   "packageManager": "yarn@3.2.0",
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.1",
-    "@saberhq/eslint-config": "^1.12.55",
+    "@rushstack/eslint-patch": "^1.1.3",
+    "@saberhq/eslint-config": "^1.12.72",
+    "@saberhq/tsconfig": "^1.12.72",
     "@types/bn.js": "^5.1.0",
     "@types/eslint": "^8.4.1",
-    "@types/lodash": "^4.14.180",
-    "@types/node": "^17.0.22",
-    "@types/prettier": "^2.4.4",
-    "eslint": "^8.11.0",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^17.0.30",
+    "@types/prettier": "^2.6.0",
+    "eslint": "^8.14.0",
     "eslint-import-resolver-node": "^0.3.6",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.26.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.7",
-    "prettier": "^2.6.0",
+    "lint-staged": "^12.4.1",
+    "prettier": "^2.6.2",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@project-serum/anchor": "^0.23.0",
-    "@quarryprotocol/quarry-sdk": "^3.0.0",
-    "@saberhq/anchor-contrib": "^1.12.55",
-    "@saberhq/solana-contrib": "^1.12.55",
-    "@saberhq/token-utils": "^1.12.55",
-    "@solana/web3.js": "^1.36.0",
-    "axios": "^0.26.1",
+    "@project-serum/anchor": "^0.24.2",
+    "@quarryprotocol/quarry-sdk": "^5.0.2",
+    "@saberhq/anchor-contrib": "^1.12.72",
+    "@saberhq/solana-contrib": "^1.12.72",
+    "@saberhq/token-utils": "^1.12.72",
+    "@solana/web3.js": "^1.41.3",
+    "axios": "^0.27.2",
     "bn.js": "^5.2.0",
     "fast-json-stable-stringify": "^2.1.0",
-    "jsbi": "^4.2.0",
+    "jsbi": "^4.3.0",
     "lodash": "^4.17.21",
+    "superstruct": "^0.15.4",
     "tiny-invariant": "^1.2.0",
-    "toml": "^3.0.0"
+    "toml": "^3.0.0",
+    "tslib": "^2.4.0"
   },
   "scripts": {
     "typecheck": "tsc",
