--- a/src/config/Rewarders.toml
+++ b/src/config/Rewarders.toml
@@ -282,3 +282,29 @@ address = "Euv9QFYjjPVzF56Pvp8aUZisAnU465oKEfn858apHmsf"
 color = "#59FF04"
 description = "Get FUXD"
 website = "https://2xd.fi/"
+
+[[rewarders]]
+id = "parasol"
+name = "Parasol Finance"
+networks = ["mainnet-beta"]
+address = "CWbKCRhEgqEvPvS1cdDYuMsRayn19YMeYVbUV5vhHV2m"
+color = "#7939FF"
+description = "The First Community Governed IDO Platform"
+website = "https://parasol.finance"
+
+[rewarders.redeemer]
+underlyingToken = "Hmatmu1ktLbobSvim94mfpZmjL5iiyoM1zidtXJRAdLZ"
+method = "parasol"
+
+[[rewarders]]
+id = "parasol-devnet"
+name = "Parasol Finance"
+networks = ["devnet"]
+address = "CWbKCRhEgqEvPvS1cdDYuMsRayn19YMeYVbUV5vhHV2m"
+color = "#7939FF"
+description = "The First Community Governed IDO Platform"
+website = "https://parasol.finance"
+
+[rewarders.redeemer]
+underlyingToken = "HK3Q8SJYiV1kLo3b6vfwLnL45nhunnt4kSBVQNa3Z28J"
+method = "parasol-devnet"
