--- a/package.json
+++ b/package.json
@@ -6,39 +6,39 @@
   "repository": "git@github.com:quarryprotocol/rewarder-list.git",
   "author": "Larry Jarry <larry@quarry.so>",
   "license": "AGPL-3.0",
-  "packageManager": "yarn@3.2.3",
+  "packageManager": "yarn@4.0.0-rc.26",
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@saberhq/eslint-config": "^2.0.5",
-    "@saberhq/tsconfig": "^2.0.5",
+    "@rushstack/eslint-patch": "^1.2.0",
+    "@saberhq/eslint-config": "^2.1.0",
+    "@saberhq/tsconfig": "^2.1.0",
     "@types/bn.js": "^5.1.1",
-    "@types/eslint": "^8.4.6",
-    "@types/lodash": "^4.14.184",
-    "@types/node": "^18.7.16",
-    "@types/prettier": "^2.7.0",
-    "eslint": "^8.23.0",
+    "@types/eslint": "^8.4.8",
+    "@types/lodash": "^4.14.186",
+    "@types/node": "^18.11.7",
+    "@types/prettier": "^2.7.1",
+    "eslint": "^8.26.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@project-serum/anchor": "^0.24.2",
-    "@quarryprotocol/quarry-sdk": "^5.2.0",
-    "@saberhq/anchor-contrib": "^1.14.5",
-    "@saberhq/solana-contrib": "^1.14.5",
-    "@saberhq/token-utils": "^1.14.5",
-    "@solana/web3.js": "^1.60.0",
+    "@project-serum/anchor": "^0.25.0",
+    "@quarryprotocol/quarry-sdk": "^5.3.0",
+    "@saberhq/anchor-contrib": "^1.14.9",
+    "@saberhq/solana-contrib": "^1.14.9",
+    "@saberhq/token-utils": "^1.14.9",
+    "@solana/web3.js": "^1.66.2",
     "axios": "^0.27.2",
     "bn.js": "^5.2.1",
     "fast-json-stable-stringify": "^2.1.0",
     "jsbi": "^4.3.0",
     "lodash": "^4.17.21",
-    "superstruct": "^0.16.0",
-    "tiny-invariant": "^1.2.0",
+    "superstruct": "^0.16.6",
+    "tiny-invariant": "^1.3.1",
     "toml": "^3.0.0",
     "tslib": "^2.4.0"
   },
