--- a/.github/workflows/refresh-registry.yml
+++ b/.github/workflows/refresh-registry.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/setup-node@v3
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
       - name: Yarn Cache
         uses: actions/cache@v3.0.11
         with:
