--- a/package.json
+++ b/package.json
@@ -6,41 +6,40 @@
   "repository": "git@github.com:quarryprotocol/rewarder-list.git",
   "author": "Larry Jarry <larry@quarry.so>",
   "license": "AGPL-3.0",
-  "packageManager": "yarn@4.0.0-rc.26",
+  "packageManager": "yarn@4.0.2",
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@saberhq/eslint-config": "^2.1.0",
-    "@saberhq/tsconfig": "^2.1.0",
-    "@types/bn.js": "^5.1.1",
-    "@types/eslint": "^8.4.8",
-    "@types/lodash": "^4.14.186",
-    "@types/node": "^18.11.7",
-    "@types/prettier": "^2.7.1",
-    "eslint": "^8.26.0",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-plugin-import": "^2.26.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
+    "@rushstack/eslint-patch": "^1.6.0",
+    "@saberhq/eslint-config": "^3.2.0",
+    "@saberhq/tsconfig": "^3.2.0",
+    "@types/bn.js": "^5.1.5",
+    "@types/eslint": "^8.44.8",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^17.0.45",
+    "@types/prettier": "^3.0.0",
+    "eslint": "^8.54.0",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-plugin-import": "^2.29.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.1.0",
+    "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^5.3.2"
   },
   "dependencies": {
-    "@project-serum/anchor": "^0.25.0",
+    "@project-serum/anchor": "^0.23.0",
     "@quarryprotocol/quarry-sdk": "^5.3.0",
-    "@saberhq/anchor-contrib": "^1.14.9",
-    "@saberhq/solana-contrib": "^1.14.9",
-    "@saberhq/token-utils": "^1.14.9",
-    "@solana/web3.js": "^1.66.2",
-    "axios": "^0.27.2",
+    "@saberhq/anchor-contrib": "^1.15.0",
+    "@saberhq/solana-contrib": "^1.15.0",
+    "@saberhq/token-utils": "^1.15.0",
+    "@solana/web3.js": "^1.36.0",
+    "axios": "^0.26.1",
     "bn.js": "^5.2.1",
     "fast-json-stable-stringify": "^2.1.0",
     "jsbi": "^4.3.0",
     "lodash": "^4.17.21",
-    "superstruct": "^0.16.6",
     "tiny-invariant": "^1.3.1",
     "toml": "^3.0.0",
-    "tslib": "^2.4.0"
+    "tslib": "^2.6.2"
   },
   "scripts": {
     "typecheck": "tsc",
