--- a/.github/workflows/refresh-registry.yml
+++ b/.github/workflows/refresh-registry.yml
@@ -14,13 +14,13 @@ jobs:
     name: Refresh Registry from chain
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
       - name: Yarn Cache
-        uses: actions/cache@v3.0.11
+        uses: actions/cache@v3
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
@@ -29,6 +29,7 @@ jobs:
       - run: yarn install
       - run: mkdir -p data/
       - run: cp -R static/* data/
+      - run: yarn build
       - run: yarn compile-rewarders-list
       - run: yarn fetch-all-rewarders
         env:
