--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "CommonJS",
     "resolveJsonModule": true,
-    "noEmit": true
+    "outDir": "dist/"
   },
-  "include": ["src/", ".eslintrc.cjs"]
+  "include": ["src/"]
 }
