--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
-  "extends": "@saberhq/tsconfig/tsconfig.lib.json",
+  "extends": "@saberhq/tsconfig/tsconfig.module.json",
   "compilerOptions": {
-    "module": "CommonJS",
     "resolveJsonModule": true,
     "outDir": "dist/"
   },
