--- a/.github/workflows/refresh-registry.yml
+++ b/.github/workflows/refresh-registry.yml
@@ -41,7 +41,11 @@ jobs:
       - run: yarn decorate-rewarders
       - run: yarn build-token-list
         env:
+          NETWORK: mainnet-beta
           MAINNET_SOLANA_RPC_ENDPOINT: ${{ secrets.MAINNET_SOLANA_RPC_ENDPOINT }}
+      - run: yarn build-token-list
+        env:
+          NETWORK: devnet
       - run: yarn build-tvl-list
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
