update rewarder list

--- a/Rewarders.toml
+++ b/Rewarders.toml
@@ -308,3 +308,12 @@ website = "https://parasol.finance"
 [rewarders.redeemer]
 underlyingToken = "HK3Q8SJYiV1kLo3b6vfwLnL45nhunnt4kSBVQNa3Z28J"
 method = "parasol-devnet"
+
+[[rewarders]]
+id = "vault"
+name = "The Vault"
+networks = ["mainnet-beta"]
+address = "9aE2s74qwiyWkRyRtfxKYLTX6XFLdoaTx8UEr6DE8SEd"
+color = "#ffad03"
+description = "Solana stake pool for creating and supporting up-and-coming validators"
+website = "https://thevault.finance"
