--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
+    "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
+    "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
+    "@metaplex-foundation/umi-web3js-adapters": "^0.9.2",
     "@project-serum/anchor": "^0.23.0",
     "@quarryprotocol/quarry-sdk": "^5.3.0",
     "@saberhq/anchor-contrib": "^2.0.0",
